--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
 <script type="module">
     import { qX, rY } from 'https://raw.githubusercontent.com/sd-info/sc/main/c1.js';
     import { b7, p8 } from 'https://raw.githubusercontent.com/sd-info/sc/main/u2.js';
-    import { v9 } from 'https://raw.githubusercontent.com/sd-info/sc/main/main/i3.js';
-    import { k5, n6 } from 'https://raw.githubusercontent.com/sd-info/sc/main/main/d4.js';
-    import { x0 } from 'https://raw.githubusercontent.com/sd-info/sc/main/main/m5.js';
-    import 'https://raw.githubusercontent.com/sd-info/sc/main/main/e6.js';
+    import { v9 } from 'https://raw.githubusercontent.com/sd-info/sc/main/i3.js';
+    import { k5, n6 } from 'https://raw.githubusercontent.com/sd-info/sc/main/d4.js';
+    import { x0 } from 'https://raw.githubusercontent.com/sd-info/sc/main/m5.js';
+    import 'https://raw.githubusercontent.com/sd-info/sc/main/e6.js';
 </script>
 </head>
 <body class="bg-indigo-50 min-h-screen flex flex-col font-sans">
