--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
         }
     </style>
 <script type="module">
-    import { qX, rY } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/c1.js';
-    import { b7, p8 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/u2.js';
-    import { v9 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/i3.js';
-    import { k5, n6 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/d4.js';
-    import { x0 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/m5.js';
-    import 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/e6.js';
+    import { qX, rY } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/c1.js';
+    import { b7, p8 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/u2.js';
+    import { v9 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/i3.js';
+    import { k5, n6 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/d4.js';
+    import { x0 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/m5.js';
+    import 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/e6.js';
 </script>
 </head>
 <body class="bg-indigo-50 min-h-screen flex flex-col font-sans">
