--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
         }
     </style>
 <script type="module">
-    import { qX, rY } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/c1.js';
-    import { b7, p8 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/u2.js';
-    import { v9 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/i3.js';
-    import { k5, n6 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/d4.js';
-    import { x0 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/m5.js';
-    import 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/e6.js';
+    import { qX, rY } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/c1.js';
+    import { b7, p8 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/u2.js';
+    import { v9 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/i3.js';
+    import { k5, n6 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/d4.js';
+    import { x0 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/m5.js';
+    import 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/e6.js';
 </script>
 </head>
 <body class="bg-indigo-50 min-h-screen flex flex-col font-sans">
@@ -158,7 +158,7 @@
             <div class="flex flex-col gap-4 mb-6">
                 <input type="text" id="vIn" placeholder="Paste YouTube Video URL to Download Thumbnail..."
                     class="w-full p-3 sm:p-4 neumorphic-inset rounded-xl text-gray-700 focus:outline-none focus:ring-2 focus:ring-purple-500 transition-all duration-300 text-base sm:text-lg">
-                <button onclick="x9k()"
+                <button onclick="x0()"
                     class="w-full sm:w-auto bg-gradient-to-r from-purple-500 to-indigo-500 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-xl hover:from-purple-600 hover:to-indigo-600 transition-all duration-300 font-semibold shadow-lg hover:shadow-xl text-base sm:text-lg">
                     Download YouTube Thumbnail Now
                 </button>
