--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     import { k5, n6 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/d4.js';
     import { x0 } from 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/m5.js';
     import 'https://cdn.jsdelivr.net/gh/sd-info/sc@main/e6.js';
+    document.getElementById('downloadBtn').addEventListener('click', x0);
 </script>
 </head>
 <body class="bg-indigo-50 min-h-screen flex flex-col font-sans">
