--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     import 'https://cdn.jsdelivr.net/gh/sd-info/sc@59ab957605a225f94b78aeb488b4cb6f8c80a428/e6.js';
 </script>
     <script>
-export async function x0() {
+async function x0() {
     const u = document.getElementById('vIn').value.trim();
     const p = document.getElementById('pVw');
     const e = document.getElementById('eRr');
