--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         window.x0 = x0;
         window.k5 = k5;
     </script>
+    <meta name="msvalidate.01" content="764C91F114F8E8F3D74E3542CE54D36C" />
 </head>
 <body class="bg-indigo-50 min-h-screen flex flex-col font-sans">
     <!-- Header -->
