--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:description"
         content="Easily download YouTube thumbnails with our free tool. Get high-quality YT thumbnail downloads in all resolutions for any video.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://abhraneel3.github.io/YouTube-Thumbnail-Downloader/">
+    <meta property="og:url" content="https://sd-info.github.io/Free-YT-Thumbnail-Downloader/">
     <meta property="og:image"
         content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimK0uYpjA8gbRpPtlqaizWSNslN1Vu8iNcGobHTOnP6sf0DMwwJiKEf3_ORl-FzgIFNWpeWPgct9yC4eePaf9Ky1RNnaPYTmYwFnWQi0e65p0zmhZkH1mvEmVQOWpk0cR7vw0nW2d7iGr2LEZMpKnexweSUsHqI2lnUwYy9TBeKMr9Co-Kn7GQLQ73rlgV/s16000/Download%20YouTube%20Thumbnail%20-%20Free%20YT%20Thumbnail%20Downloader.webp">
     <meta property="og:image:alt" content="YouTube Thumbnail Downloader Tool">
@@ -54,7 +54,7 @@
             "@type": "WebApplication",
             "name": "YouTube Thumbnail Downloader",
             "description": "A free tool to download YouTube thumbnails in multiple resolutions, including how to download thumbnail from YouTube videos.",
-            "url": "https://abhraneel3.github.io/YouTube-Thumbnail-Downloader/youtube-thumbnail-downloader",
+            "url": "https://sd-info.github.io/Free-YT-Thumbnail-Downloader/",
             "applicationCategory": "Utility",
             "operatingSystem": "Web",
             "offers": {
@@ -84,13 +84,13 @@
                     "@type": "ListItem",
                     "position": 1,
                     "name": "Home",
-                    "item": "https://abhraneel3.github.io/YouTube-Thumbnail-Downloader/"
+                    "item": "https://sd-info.github.io/Free-YT-Thumbnail-Downloader/"
                 },
                 {
                     "@type": "ListItem",
                     "position": 2,
                     "name": "YouTube Thumbnail Downloader",
-                    "item": "https://abhraneel3.github.io/YouTube-Thumbnail-Downloader/"
+                    "item": "https://sd-info.github.io/Free-YT-Thumbnail-Downloader/"
                 }
             ]
         }
